fix auth modal visibility

--- a/style.css
+++ b/style.css
@@ -219,6 +219,7 @@ div.authModal {
     display: flex;
     align-items: center;
     justify-content: center;
+    z-index: 999;
 }
 
 div.authModal > div {
